# ChatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/model/: friendmodel.hpp  group.hpp  group_model.hpp  group_user.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/: CMakeLists.txt
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
